--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -1,30 +1,116 @@
+/* =============================================================================
+   imports
+============================================================================= */
+/* variables */
+@import './variables.scss';
+
+/* mixins */
+@import './site-mixins.scss';
+
+/* =============================================================================
+   common styling
+============================================================================= */
 body {
   margin: 0;
   padding: 0;
+  background-color: #9df9cc !important;
   font-family: sans-serif;
 }
 
-.App {
-  text-align: center;
+.container {
+  .align-center {
+    position: absolute;
+    left: $full-width/2;
+    top: $full-width/2;
+    transform: translate(-$full-width/2, -$full-width/2);
+  }
+  h1 { 
+    margin: 0 0 40px 0;
+    color: #a72743; 
+    text-align: center;
+  } 
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+/* responsive button */
+.btn-responsive {
+  @include bp-lg {
+    padding: 10px 16px;
+    font-size: 18px;
+    line-height: 1.3333333;
+    border-radius: 2px;
+  }
+  @include bp-sm {
+    padding: 5px 10px;
+    font-size: 15px;
+    line-height: 1.5;
+    border-radius: 3px;
+  }
+  @include bp-xs {
+    padding: 5px 10px;
+    font-size: 15px;
+    line-height: 1.5;
+    border-radius: 3px;
+  }
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+.horizontal-center { text-align: center; }
+
+/* common button */
+.form-btn {
+  @extend .horizontal-center;
+  .btn-common {
+    padding: 8px 30%;
+    text-align: center; 
+    font-weight: 700;  
+  }
 }
 
-.App-intro {
-  font-size: large;
+/* error msg */
+.error-text {
+  min-height: 17px;
+  color: #aa4745;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+/* drop down styling for gender */
+.gender-select-arrow {
+  width: $full-width;
+  display: inline-block;
+  overflow: hidden;
+  .gender-select {
+    width: $full-width;
+    height: 34px;
+    padding: 0 20px;
+    border: 1px solid #cfcfcf;
+    border-radius: 4px;
+    position: relative;
+    background-color: $white;
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    color: #161616;
+  }
+}
+
+/* add placeholder to the date input field */
+input[type='date']:before {
+  content: attr(placeholder);
+  padding-right: 3px;
+  display: inline-block;
+}
+
+.link-step-one {
+  display: inline-block;
+  margin-top: 15px;
+  font-size: 16px;
+}
+
+.user-list {
+  padding: 0;
+  list-style-type: none;
+  .user-list-item {
+    padding-bottom: 15px;
+    color: #ca2c65;
+    font-size: 16px;
+    &:last-of-type { padding-bottom: 0; }
+    .user-fields { font-weight: 700; }
+  }
 }
