--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -14,7 +14,6 @@ body {
   margin: 0;
   padding: 0;
   background-color: #9df9cc !important;
-  font-family: sans-serif;
 }
 
 .container {
@@ -79,7 +78,7 @@ body {
   .gender-select {
     width: $full-width;
     height: 34px;
-    padding: 0 20px;
+    padding: 0 12px;
     border: 1px solid #cfcfcf;
     border-radius: 4px;
     position: relative;
@@ -103,7 +102,8 @@ input[type='date']:before {
   font-size: 16px;
 }
 
-.user-list {
+/* user details */
+.user-details-list {
   padding: 0;
   list-style-type: none;
   .user-list-item {
